# recipes

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
base/: Observer.hpp
cpp/: .clang-format  .clangd  CMakeLists.txt
cpp/base/: Construct.hpp  Observer.hpp  RetCode.hpp  ScopeGuard.hpp  TimePerf.hpp
cpp/clang-plugin/: CMakeLists.txt  RefactorDecl.cpp  RefactorDecl.hpp  RefactorDeclMain.cpp  testdecl.cpp
cpp/coroutine/: CMakeLists.txt  CoroutineUtils.hpp  DoubleClick.cpp  FibonacciGen.cpp  StackOverflow.cpp  StackOverflowFix.cpp
cpp/demo/: CMakeLists.txt  Relational.hpp
cpp/demo/lispc/: main.c
cpp/glLearn/: CMakeLists.txt
cpp/glLearn/src/: BasicRect.cpp  GLTest.cpp  Shader.hpp
cpp/glLearn/src/shaders/: basic_rect.fs  basic_rect.vs
cpp/gldemo/: CMakeLists.txt
cpp/gldemo/include/glad/: glad.h
cpp/gldemo/src/: BasicRect.cpp  GLAttribute.cpp  glad.c
cpp/lisp-parser/: CMakeLists.txt  lisp.c  lisp.h
cpp/metaproggramming/: ADL.cpp  BrainFuck.cpp  CMakeLists.txt  ConstexprStr.cpp  ConstexprStr.s  Datatable.cpp  Fibonacci.cpp  FindShortestPath.cpp  Maybe.cpp  MemberDetector.cpp  MetaMacro.hpp  NthPrime.cpp  PartiallyOrdering.cpp  Relational.cpp  TaskDSL.cpp  TaskDSLv2.cpp  Templates.cpp  TupleUtils.hpp  Typelist.hpp  TypelistTest.cpp
cpp/metaproggramming/brain_fuck/: BrainFuckConstexpr.cpp  BrainFuckTemplateMeta.cpp
cpp/metaproggramming/constexpr/: ConstexprFunc.cpp  ConstexprVar.cpp  CountMember.cpp  Optional.cpp
cpp/metaproggramming/parser_combinator/: ParserCombinator.hpp  main.cpp
cpp/metaproggramming/ranges/: Calendar.cpp
cpp/metaproggramming/reflection/: StaticRefl.cpp  StaticRefl.hpp  StaticRefl_TupleImpl.cpp
cpp/metaproggramming/task_dsl_v2/: Connection.hpp  JobTrait.hpp  TaskAnalyzer.hpp  TaskDsl.hpp  main.cpp
cpp/oop/: CMakeLists.txt  Lisp.cpp  Picture.cpp
cpp/renderer/: CMakeLists.txt  CustomRendering.cpp  CustomRendering.h  Geometry.hpp  Model.cpp  Model.h  Shader.h  StbImpl.cpp  main.cpp
cpp/test/: BaseTest.cpp  CMakeLists.txt  main.cpp
cpp/trade/: CallAuction.cpp
cpp/utils/: Construct.hpp  CountMember.hpp  Delector.hpp  Observer.hpp  RetCode.hpp  ScopeGuard.hpp
demo/: CMakeLists.txt  lisp.cpp
demo/lispc/: lisp.c  lisp.h  main.c  test.cpp
haskell/: codewars.hs
metaproggramming/: MaxProduct.cpp
rust/BrainFuck/: Cargo.toml  README.md
rust/BrainFuck/src/: lib.rs  main.rs
rust/FindShortestPath/: Cargo.toml
rust/FindShortestPath/src/: main.rs
rust/RoboScript/: Cargo.toml
rust/RoboScript/src/: main.rs
template/: Relational.hpp
